Enforce Constraint.predicate's columns always known
`Constraint.getPredicateColumns` should be always present whenever
`Constraint.predicate` is present. The columns covered by the predicate
are important for the connector, and enforcing the mutual presence makes
constraint consumption simpler.